artifacts/manifests/semantic-router/httproutes_local.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: multi-model
  namespace: agentgateway-system
spec:
  parentRefs:
    - name: agentgateway-proxy
      namespace: agentgateway-system
  rules:
  - matches:
    - headers:
      - type: Exact
        name: x-vsr-selected-model
        value: gpt-4.1
    backendRefs:
    - name: gpt-4.1
      namespace: agentgateway-system
      group: agentgateway.dev
      kind: AgentgatewayBackend
  - matches:
    - headers:
      - type: Exact
        name: x-vsr-selected-model
        value: gpt-3.5-turbo
    backendRefs:
    - name: gpt-3.5-turbo
      namespace: agentgateway-system
      group: agentgateway.dev
      kind: AgentgatewayBackend
